src/test/resources/fail/cyclicgraph/C.scala
//acyclic
package fail.cyclicgraph

object C extends A
